--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,4 +1,11 @@
+html {
+  min-width: 100%;
+  min-height: 100%;
+  background-color: var(--teal);
+}
+
 body {
+  background-color: var(--teal);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,4 +18,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  padding: 1rem;
 }
