--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,25 +1,3 @@
-html {
-  min-width: 100%;
-  min-height: 100%;
-  background-color: var(--teal);
-}
-
-body {
-  background-color: var(--teal);
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#root {
-  padding: 1rem;
-}
+@import './main-page.scss';
+@import './register-page.scss';
+@import './input.scss';
