--- a/src/client/style/pages/register-page.scss
+++ b/src/client/style/pages/register-page.scss
@@ -1,9 +1,6 @@
 .register-page {
-  .home-link {
-    max-width: 850px;
-    padding-bottom: 1rem;
-    margin: 0 auto;
-  }
+  padding: 1rem;
+  padding-top: 3rem;
 
   .register-form {
     margin: 0 auto;
