--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,3 +1,4 @@
-@import './main-page.scss';
-@import './register-page.scss';
-@import './input.scss';
+@import './pages/main-page.scss';
+@import './pages/register-page.scss';
+@import './components/input.scss';
+@import './components/header.scss';
