#1 login register page

--- a/src/client/style/pages/login-register-page.scss
+++ b/src/client/style/pages/login-register-page.scss
@@ -25,7 +25,12 @@
         padding: 1rem;
         padding-top: 0.5rem;
 
-        button {
+        .alert {
+          margin-top: 1rem;
+          margin-bottom: 0;
+        }
+
+        button.btn {
           margin-top: 1rem;
         }
       }
