--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,4 +1,4 @@
 @import './pages/main-page.scss';
-@import './pages/register-page.scss';
+@import './pages/login-register-page.scss';
 @import './components/input.scss';
 @import './components/header.scss';
