--- a/src/client/style/pages/main-page.scss
+++ b/src/client/style/pages/main-page.scss
@@ -25,3 +25,15 @@ code {
 .main-page {
   padding: 1rem;
 }
+
+.feedback {
+  display: block;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+}
+
+.valid-feedback,
+.invalid-feedback {
+  display: block;
+}
