#4 header dashboard link

--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,4 +1,5 @@
 @import './pages/main-page.scss';
 @import './pages/login-register-page.scss';
+@import './pages/dashboard-page.scss';
 @import './components/input.scss';
 @import './components/header.scss';
