--- a/src/client/style/pages/main-page.scss
+++ b/src/client/style/pages/main-page.scss
@@ -5,6 +5,10 @@ html {
   color: var(--white);
 }
 
+hr {
+  border-color: var(--white);
+}
+
 body {
   background-color: var(--gray);
   color: var(--white);
