--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,3 +1,5 @@
+@import './tailwind/index.css';
+
 @import './pages/main-page.scss';
 @import './pages/login-register-page.scss';
 @import './pages/dashboard-page.scss';
