header dropdown concept

--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,4 +1,5 @@
 @import './tailwind/index.css';
+@import './toronto-tippy-theme.scss';
 /*
 @import './pages/main-page.scss';
 @import './pages/login-register-page.scss';
