tailwind continued, close #16

--- a/src/client/style/toronto-tippy-theme.scss
+++ b/src/client/style/toronto-tippy-theme.scss
@@ -5,6 +5,7 @@
 .tippy-tooltip.toronto-theme {
   background-color: var(--toronto-color);
   color: white;
+  padding: 0;
 }
 
 .tippy-tooltip.toronto-theme[data-animatefill] {
