--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,5 +1,17 @@
-@import './pages/main-page.scss';
-@import './pages/login-register-page.scss';
-@import './pages/dashboard-page.scss';
-@import './components/input.scss';
-@import './components/header.scss';
+@import './tailwind/index.css';
+@import './toronto-tippy-theme.scss';
+
+html {
+  min-width: 100%;
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
