#48 basic markdown support

--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,5 +1,6 @@
 @import './tailwind/index.css';
 @import './toronto-tippy-theme.scss';
+@import './react-mde/react-mde-all.scss';
 
 html {
   min-width: 100%;
