--- a/src/client/style/react-mde/react-mde-all.scss
+++ b/src/client/style/react-mde/react-mde-all.scss
@@ -1,4 +1,11 @@
+$focus-color: #6b46c1;
+$border-color: #2d3748;
+
 .markdown-editor .react-mde {
+  border-radius: 0.25rem;
+  border-width: 2px;
+  border-color: $border-color;
+
   button {
     line-height: 1.15;
     font-size: 13.3333px;
@@ -6,11 +13,20 @@
 
   .mde-header {
     background: transparent;
+    border-bottom-width: 2px;
+    border-bottom-color: #2d3748;
 
     .mde-tabs {
       button {
         padding-left: 4px;
         padding-right: 4px;
+        outline: 0;
+
+        &.selected {
+          border-radius: 0.25rem;
+          border-width: 2px;
+          border-color: #6b46c1;
+        }
       }
     }
 
@@ -25,9 +41,12 @@
 
   .mde-text {
     background: transparent;
+    outline-color: $focus-color;
   }
 
   .grip {
+    border-top-width: 2px;
+    border-top-color: $border-color;
     background: transparent;
     color: white;
     display: flex;
