--- a/src/client/style/style.scss
+++ b/src/client/style/style.scss
@@ -1,6 +1,7 @@
 @import './tailwind/index.css';
 @import './toronto-tippy-theme.scss';
 @import './react-mde/react-mde-all.scss';
+@import './input/checkbox.scss';
 
 html {
   min-width: 100%;
