blog post preview padding

--- a/src/client/style/react-mde/react-mde-all.scss
+++ b/src/client/style/react-mde/react-mde-all.scss
@@ -81,6 +81,6 @@ $item-hover: #4a5568;
   }
 }
 
-.BlogPostTemplate .mde-preview .mde-preview-content {
+.blog-post-preview .mde-preview .mde-preview-content {
   padding: 0;
 }
